# tcren

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  DATASETS.md  README.md  STATUS.md  environment.yml  pyproject.toml  setup.sh
.github/workflows/: docs.yml  publish.yml  tests.yml
appendix/: .gitignore  Makefile  refs.bib  tcren.tex  workflow.dot
data/: PDB_date.tsv  TCRen_potential.csv  orient_metadata.json
data/output_TCRen/structures_annotation/: general.txt  markup.txt
docs/: Makefile  conf.py  getting-started.rst  index.rst  modules.rst  oracle.rst  performance.rst  rederivation.md  tcren.rst
docs/_static/: custom.css
docs/notebooks/: complementarity_map_2d.ipynb  pocket_cdr_3d.ipynb
example/output_TCRen/: candidate_epitopes_TCRen.csv
legacy/data/: TCRen_potential.csv  contact_maps_PDB.csv  contacts_PDB.csv  summary_PDB_structures.csv
legacy/tcren_native/: __init__.py  annotate.py  database.py
legacy/tcren_native/tests/: test_native_db.py  test_native_regression.py  test_native_uses.py
notebooks/: README.md  canonical_frame_figures.ipynb  complementarity_map_2d.ipynb  contact_thresholds_and_bondtypes.ipynb  environment.yml  example_gil_a02_rs_motif.ipynb  mhc_pseudosequence_mps.ipynb  pocket_cdr_3d.ipynb  pymol_canonical_figures.ipynb  setup.sh  tcren_analysis.ipynb
notebooks/data/: orient_metadata_Native2022.csv  orient_metadata_Native2026.csv
notebooks/natcompsci2022/: 00_bootstrap.ipynb  01_nonred_and_derivation.ipynb  02_benchmark_cognate_unrelated.ipynb  03_benchmark_yeast_display.ipynb  04_benchmark_neoepitopes.ipynb  05_benchmark_shuffle_structures.ipynb  06_benchmark_models.ipynb  07_compare_legacy.ipynb  README.md  environment.yml  extract_raw_birnbaum.py  extract_raw_cognate.py  extract_raw_neoepitopes_v1.py  extract_raw_shuffle.py  setup.sh
notebooks/natcompsci2022/results_new/: TCRen_2022.csv  TCRen_2026.csv  TCRen_2026_LOO.csv  TCRen_native.csv  TCRen_native_LOO.csv  benchmark_bigot.csv  benchmark_birnbaum.csv  benchmark_bobisse.csv  benchmark_cognate_iedb_ranks.csv  benchmark_cognate_ranks.csv  benchmark_models_ranks.csv  benchmark_shuffle_auc.csv  contacts_2022.csv  contacts_2026.csv  contacts_native.csv  markup_2022.csv  markup_2026.csv  markup_native.csv  mhc_2026.csv  raw_bigot_v1.csv  raw_birnbaum.csv  raw_bobisse_v1.csv  raw_cognate.csv  raw_cognate_iedb.csv  raw_shuffle.csv  regression_report.csv
scripts/: bench_harness.py  binder_benchmark.py  binder_validate.py  build_dope.py  build_pseudo_fasta.py  ddg_validate.py  fold_benchmark.py  fold_crossdock_benchmark.py  koff_benchmark.py  push_canonical_to_hub.py  rederive_full_sweep.py  rederive_full_sweep_par.py  rederive_sweep.py  summarize_structure_example.py
skills/tcren/: SKILL.md
src/_align/: align.cpp
src/_fold/: fold.cpp
src/_geom/: geom.cpp
src/_refine/: refine.cpp
src/_relax/: relax.cpp
src/tcren/: __init__.py  analysis.py  clashes.py  cli.py  contactmap.py  ddg.py  mechanics.py  oracle.py  paths.py  pipeline.py  recent.py  scoring.py  scoring_rank.py
src/tcren/annotation/: __init__.py  arda_adapter.py  cgene.py  chains.py
src/tcren/binder/: __init__.py  features.py  model.py
src/tcren/contacts/: __init__.py  definitions.py  geometry.py  table.py
src/tcren/data/: TCRen_potential_rederived.csv  __init__.py  canonical_frame.json  dope_potential.npz  mhc_canonical.json  mhci_pseudo.fa  mhcii_pseudo.fa  tcr_constant.fasta
src/tcren/mhc/: __init__.py  domains.py  imgt.py  linker.py  mapper.py  pseudo.py  reference.py  regions.py
src/tcren/native/: __init__.py  align.py  annotate.py  bootstrap.py  potential.py
src/tcren/orient/: __init__.py  align.py  chains.py  docking.py  exceptions.py  frame.py  hub.py  pipeline.py  superimpose.py
src/tcren/paper/: __init__.py  bootstrap.py  helpers.py
src/tcren/potential/: __init__.py  derive.py  model.py  redundancy.py
src/tcren/project2d/: __init__.py  frame.py  pockets.py  tables.py
src/tcren/refine/: CPP_REWRITE.md  __init__.py  anchors.py  interface.py  model.py  oracle_flexpep.py  register.py  rmsd.py  substitute.py
src/tcren/refine/engines/: __init__.py  base.py  ccd.py  dope.py  openmm_engine.py  promod3_engine.py
src/tcren/structure/: __init__.py  io.py  model.py
src/tcren/viz/: __init__.py  palette.py  pocket3d.py  svg2d.py
tests/assets/am_oracle/: contact_maps.csv  summary.csv
tests/benchmark/: test_perf_benchmark.py
tests/regression/: test_annotation_regression.py  test_contacts_regression.py  test_energy_mechanics_cli.py  test_mhc_groove.py  test_mhc_regression.py  test_orient.py  test_pocket3d.py  test_potential_regression.py  test_project2d_frame.py  test_rank_cli.py  test_score_regression.py  test_species_disambiguation.py
tests/unit/: test_align_ext.py  test_analysis.py  test_arda_adapter.py  test_atom_contacts.py  test_atomic_scoring.py  test_bench_harness_loo.py  test_binder.py  test_cgene.py  test_cgene_trim.py  test_clashes.py  test_contact_definitions.py  test_ddg.py  test_docking_angle.py  test_fold.py  test_geom.py  test_geometry.py  test_linker.py  test_mechanics.py  test_mhc_db_cache.py  test_mhc_imgt.py  test_mhc_regions.py  test_oracle.py  test_orient_chains.py  test_orient_filter.py  test_paper.py  test_paths_cli.py  test_pipeline.py  test_pipeline_potentials.py  test_pockets.py  test_potential.py  test_project2d_tables.py  test_pseudo.py  test_recent_fetch.py  test_redundancy.py  test_redundancy_weighting.py  test_reference_fetch.py  test_refine.py  test_region_pair_contacts.py  test_region_set.py  test_register.py  (+9 more)
