[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tcren"
version = "0.1.0"
description = "Structure-based prediction of TCR recognition of epitopes via residue-level statistical potentials"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "ISALGO laboratory", email = "mikhail.shugay@gmail.com" }]
dependencies = [
    "biopython>=1.84",
    "scipy>=1.11",
    "numpy>=1.26",
    "polars>=1.0",
    "typer>=0.12",
    "requests>=2.31",
    "huggingface_hub>=0.20",  # lazy fetch of canonical reference structures for orientation
    "arda @ git+https://github.com/antigenomics/arda.git@2.0.1",  # TCR annotation backend
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8", "py3Dmol>=2.0"]
flexpep = []
docs = ["sphinx", "pydata-sphinx-theme", "nbsphinx"]
test = ["pytest", "pytest-cov"]
dev = ["ruff", "pytest", "pytest-cov"]
# Analysis/viz deps for the reproduction notebooks (notebooks/natcompsci2022/) — kept out
# of the lean runtime deps. Installed into the separate `tcren-nb` conda env (see that
# directory's environment.yml / setup.sh / README.md).
notebooks = [
    "jupyter", "ipykernel", "nbconvert",
    "matplotlib>=3.8", "rapidfuzz>=3.0", "scikit-learn>=1.3", "logomaker>=0.8",
]

[project.scripts]
tcren = "tcren.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tcren"]

[tool.hatch.build.targets.wheel.force-include]
"src/tcren/data" = "tcren/data"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: tests that invoke arda / mmseqs per structure (deselect with -m 'not slow')",
]
