[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "tcren"
version = "2.0.0"
description = "Structure-based prediction of TCR recognition of epitopes via residue-level statistical potentials"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "ISALGO laboratory", email = "mikhail.shugay@gmail.com" }]
keywords = ["TCR", "immunology", "structural-biology", "epitope", "MHC", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "biopython>=1.84",
    "scipy>=1.11",
    "numpy>=1.26",
    "polars>=1.0",
    "typer>=0.12",
    "requests>=2.31",
    "huggingface_hub>=0.20",  # lazy fetch of canonical reference structures for orientation
    "arda-mapper>=2.0.1",  # TCR annotation backend (PyPI dist of antigenomics/arda; imports as `arda`)
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8", "py3Dmol>=2.0"]
docs = ["sphinx", "pydata-sphinx-theme", "nbsphinx"]
test = ["pytest", "pytest-cov"]
dev = ["ruff", "pytest", "pytest-cov", "pybind11"]
# Analysis/viz deps for the reproduction notebooks (notebooks/natcompsci2022/) — kept out
# of the lean runtime deps. Installed into the separate `tcren-nb` conda env (see that
# directory's environment.yml / setup.sh / README.md).
notebooks = [
    "jupyter", "ipykernel", "nbconvert",
    "matplotlib>=3.8", "rapidfuzz>=3.0", "scikit-learn>=1.3", "logomaker>=0.8",
]

[project.urls]
Homepage = "https://github.com/antigenomics/tcren"
Repository = "https://github.com/antigenomics/tcren"
Documentation = "https://docs.isalgo.dev/tcren/"

[project.scripts]
tcren = "tcren.cli:app"

[tool.scikit-build]
wheel.packages = ["src/tcren"]
cmake.version = ">=3.18"
build-dir = "build/{wheel_tag}"
# Keep the sdist lean: ship only what builds the package (src/, CMakeLists, pyproject, README,
# LICENSE). Notebooks, tests, docs, fixtures and the runtime data/ set are not needed to install.
# Anchor with a leading "/" — a bare "data" would also drop the bundled src/tcren/data.
sdist.exclude = [
    "/notebooks", "/tests", "/docs", "/data", "/assets", "/scripts", "/skills",
    "/.github", "/setup.sh", "/STATUS.md", "/BENCHMARKS.md",
]
# The ext is built once at install; do NOT rebuild on import (that needs cmake on PATH at
# import time and breaks under pytest / CI where the build-env cmake is gone). Re-run
# `pip install -e .` after changing the C++ source.
editable.rebuild = false
editable.verbose = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: tests that invoke arda / mmseqs per structure (deselect with -m 'not slow')",
]
